# music-group

./: .cproject  .project  CMakeLists.txt  README.md
include/: error.h  fifo.h
scripts/: build.sh  clean.sh
src/: main.cpp
test/: fifo_threaded_ut.cpp  fifo_ut.cpp
